--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <a href="Login.html">Login</a> <!-- New link added here -->
             <a href="Selling-App.html">Selling-App</a> <!-- New link added here -->
             <a href="Weather-App.html">Weather-App</a> <!-- New link added here -->
-            <a href="Weather-App-week2.html">Weather-App-week2.html/a> <!-- New link added here -->
+            <a href="Weather-App-week2.html">Weather-App-week2.html</a> <!-- New link added here -->
 
 
 
