picture and video

--- a/Weather-App-week2.html
+++ b/Weather-App-week2.html
@@ -110,3 +110,18 @@
             <section class="project-goal">
                 <h3>The Goal of My Final Project</h3>
                 <p>The goal of my final project is to make my own weather app with different weather conditions, temperatures, and icons (images) for each, and be able to make people laugh using memes of cute a
+
+                    <div class="video-container">
+                        <h2>Weather App Video</h2>
+                        <video controls>
+                            <source src="Weather App-video2.mov" type="video/mp4">
+                            Your browser does not support the video element.
+                        </video>
+                     </div>
+
+
+                        <div class="image-container">
+                            <h2>Weather Image</h2>
+                            <img src="Weather App-picture2.png" alt="Weather Picture">
+                        </div>
+
