--- a/Weather-App-week2.html
+++ b/Weather-App-week2.html
@@ -109,19 +109,44 @@
 
             <section class="project-goal">
                 <h3>The Goal of My Final Project</h3>
-                <p>The goal of my final project is to make my own weather app with different weather conditions, temperatures, and icons (images) for each, and be able to make people laugh using memes of cute a
+                <p>The goal of my final project is to make my own weather app with different weather conditions, temperatures, and icons (images) for each, and be able to make people laugh using cute, funny animals memes.</p>
+            </section>
 
-                    <div class="video-container">
-                        <h2>Weather App Video</h2>
-                        <video controls>
-                            <source src="Weather App-video2.mov" type="video/mp4">
-                            Your browser does not support the video element.
-                        </video>
-                     </div>
+            <!-- Image: Weather App Picture 2 -->
+            <figure>
+                <img src="Weather-App-picture2.png" alt="UI Components for Weather App" width="600">
+                <figcaption>Weather App UI Components</figcaption>
+            </figure>
 
+            <!-- Video: Weather App Demo 2 -->
+            <figure class="video-container">
+                <video width="600" controls>
+                    <source src="Weather-App-video2.mov" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <figcaption>Weather App Demo: Core Features</figcaption>
+            </figure>
 
-                        <div class="image-container">
-                            <h2>Weather Image</h2>
-                            <img src="Weather App-picture2.png" alt="Weather Picture">
-                        </div>
+            <p>Next week, I'll refine the UI and begin working on backend integration. Stay tuned for more updates!</p>
+        </section>
+    </div>
 
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="learn-to-code.html">Learn to Code 1</a>
+        <a href="web-development-basics.html">Web Dev</a>
+        <a href="keep-going-with-apps.html">First Apps</a>
+        <a href="about-me.html">About Me</a>
+        <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a>
+        <a href="cookieClicker.html">Cookie Clicker</a>
+        <a href="Login.html">Login</a>
+        <a href="Selling-App.html">Selling App</a>
+        <a href="Weather-App.html">Weather App</a>
+    </nav>
+
+    <div class="footer">
+        <p>&copy; 2024 Weather App</p>
+    </div>
+    
+</body>
+</html>
