--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <a href="Selling-App.html">Selling-App</a> <!-- New link added here -->
             <a href="Weather-App.html">Weather-App</a> <!-- New link added here -->
             <a href="Weather-App-week2.html">Weather-App-week2.html</a> <!-- New link added here -->
+            <a href="Weather-App-week3.html">Weather-App-week3.html</a> <!-- New link added here -->
 
 
 
