--- a/Weather-App-week3.html
+++ b/Weather-App-week3.html
@@ -75,15 +75,11 @@
             height: auto;
             border-radius: 10px;
         }
-
-        /* Image Container */
         .image-container img {
-            max-width: 200px; /* Adjust size based on your need */
+            max-width: 200px;
             height: auto;
             border-radius: 10px;
         }
-
-        /* Styling for Description Section */
         .project-description {
             margin-top: 3em;
             text-align: center;
@@ -111,16 +107,15 @@
         <!-- Weather Image Section -->
         <div class="image-container">
             <h2>Weather Image</h2>
-            <img id="weather-image" src="Weather-App picture3.png" alt="Weather Picture" />
+            <img id="weather-image" src="Weather-App-picture3.png" alt="Weather Picture" />
         </div>
 
         <!-- Weather Video Section -->
         <div class="video-container">
             <h2>Weather Video</h2>
             <video controls>
-                <source src="Weather-App-video3.mov" type="video/mp4">
-                <source src="Weather-App-video4.mov" type="video/mp4">
-
+                <source src="Weather-App-video3.mp4" type="video/mp4">
+                <source src="Weather-App-video4.mp4" type="video/mp4">
                 Your browser does not support the video element.
             </video>
         </div>
@@ -129,6 +124,7 @@
         <div class="project-description">
             <h2>The Goal of My Project</h2>
             <p>The goal of my final project is to create a weather app that provides various weather conditions, temperatures, and other details. It will include images and videos based on the weather for a more interactive experience.</p>
+            <p><strong>Note:</strong> I made the Weather App using funny and cute cat memes on each page. Because of that, you can bring a fresh and humorous touch to the weather with cute and funny cat memes.</p>
         </div>
     </div>
 
@@ -146,7 +142,7 @@
                 return;
             }
 
-            // Fetch weather data from OpenWeather API (example)
+            // Corrected API URL with backticks and proper interpolation
             var apiKey = "YOUR_API_KEY";  // Replace with your actual API key
             var apiUrl = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`;
 
