--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -58,7 +58,10 @@
         }
         nav {
             margin: 2em 0;
-            text-align: center;
+            display: flex;
+            justify-content: center; /* Centers links horizontally */
+            flex-wrap: wrap; /* Allows wrapping on smaller screens */
+            gap: 10px; /* Space between links */
         }
         nav a {
             text-decoration: none;
@@ -66,7 +69,7 @@
             padding: 10px 20px;
             background-color: #ddd;
             border-radius: 5px;
-            margin: 0 10px;
+            transition: background-color 0.3s;
         }
         nav a:hover {
             background-color: #bbb;
@@ -87,24 +90,17 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="learn-to-code.html">Learn to Code 1</a>
-            <a href="web-development-basics.html">Web Dev</a> <!-- New link added here -->
-            <a href="keep-going-with-apps.html">First Apps</a> <!-- New link added here -->
-            <a href="about-me.html">About Me</a> <!-- New link added here -->
-            <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a> <!-- New link added here -->
-            <a href="cookieClicker.html">cookie Clicker</a> <!-- New link added here -->
-            <a href="Login.html">Login</a> <!-- New link added here -->
-            <a href="Selling-App.html">Selling-App</a> <!-- New link added here -->
-            <a href="Weather-App.html">Weather-App</a> <!-- New link added here -->
-            <a href="Weather-App-week2.html">Weather-App-week2.html</a> <!-- New link added here -->
-            <a href="Weather-App-week3.html">Weather-App-week3.html</a> <!-- New link added here -->
-
-
-
-
-
-
+            <a href="web-development-basics.html">Web Dev</a>
+            <a href="keep-going-with-apps.html">First Apps</a>
+            <a href="about-me.html">About Me</a>
+            <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a>
+            <a href="cookieClicker.html">cookie Clicker</a>
+            <a href="Login.html">Login</a>
+            <a href="Selling-App.html">Selling-App</a>
+            <a href="Weather-App.html">Weather-App</a>
+            <a href="Weather-App-week2.html">Weather-App-week2</a>
+            <a href="Weather-App-week3.html">Weather-App-week3</a>
         </nav>
-        
 
         <div class="content">
             <h3>Hobbies and Interests</h3>
