--- a/Weather-App-week3.html
+++ b/Weather-App-week3.html
@@ -107,7 +107,7 @@
         <!-- Weather Image Section -->
         <div class="image-container">
             <h2>Weather Image</h2>
-            <img id="weather-image" src="Weather-App-picture3.png" alt="Weather Picture" />
+            <img id="weather-image" src="Weather-App-picture3.png" src="Weather-App-picture4.png" src="Weather-App-picture5.png" alt="Weather Picture" />
         </div>
 
         <!-- Weather Video Section -->
@@ -124,7 +124,7 @@
         <div class="project-description">
             <h2>The Goal of My Project</h2>
             <p>The goal of my final project was to create a weather app that provides various weather conditions, temperatures, and other details.</p>
-            <p><strong>Note:</strong>I made the Weather App using funny and cute cat memes on each page. Because of that, you can bring a fresh and humorous touch to the weather with cute and funny cat memes.</p>
+            <p><strong>Note:</strong> I made the Weather App using funny and cute cat memes on each page. Because of that, you can bring a fresh and humorous touch to the weather with cute and funny cat memes.</p>
         </div>
     </div>
 
