--- a/Weather-App-week3.html
+++ b/Weather-App-week3.html
@@ -123,8 +123,7 @@
         <!-- Project Description -->
         <div class="project-description">
             <h2>The Goal of My Project</h2>
-            <p>The goal of my final project was to create a weather app that provides various weather conditions, temperatures, and other details.</p>
-            <p><strong>Note:</strong> I made the Weather App using funny and cute cat memes on each page. Because of that, you can bring a fresh and humorous touch to the weather with cute and funny cat memes.</p>
+            <p>The goal of my final project was to create a weather app that provides various weather conditions, temperatures, and other details. I made the Weather App using funny and cute cat memes on each page. Because of that, you can bring a fresh and humorous touch to the weather with cute and funny cat memes.</p>
         </div>
     </div>
 
