--- a/Weather-App-week3.html
+++ b/Weather-App-week3.html
@@ -109,15 +109,18 @@
         <!-- Weather Image Section -->
         <div class="image-container">
             <h2>Weather Image</h2>
-            <img id="weather-image" src="" alt="Weather Picture" />
+            <img id="Weather-App-picture3.png"
+            <img id="Weather-App-picture4.png"
+            <img id="Weather-App-picture5.png"
+             src="" alt="Weather-App-picture" />
         </div>
 
         <!-- Weather Video Section -->
         <div class="video-container">
             <h2>Weather Video</h2>
             <video controls>
-                <source src="Weather-App-video3.mp4" type="video/mp4">
-                <source src="Weather-App-video4.mp4" type="video/mp4">
+                <source src="Weather-App-video3.mov4" type="video/mp4">
+                <source src="Weather-App-video4.mov" type="video/mp4">
                 Your browser does not support the video element.
             </video>
         </div>
