--- a/Weather-App-week3.html
+++ b/Weather-App-week3.html
@@ -109,17 +109,16 @@
         <!-- Weather Image Section -->
         <div class="image-container">
             <h2>Weather Image</h2>
-            <img id="Weather-App-picture3.png"
-            <img id="Weather-App-picture4.png"
-            <img id="Weather-App-picture5.png"
-             src="" alt="Weather-App-picture" />
+            <img id="weather-image" src="" alt="Weather-App-picture3.png"
+            alt="Weather-App-picture4.png"
+            alt="Weather-App-picture5.png" />
         </div>
 
         <!-- Weather Video Section -->
         <div class="video-container">
             <h2>Weather Video</h2>
             <video controls>
-                <source src="Weather-App-video3.mov4" type="video/mp4">
+                <source src="Weather-App-video3.mov" type="video/mp4">
                 <source src="Weather-App-video4.mov" type="video/mp4">
                 Your browser does not support the video element.
             </video>
