--- a/Weather-App-week3.html
+++ b/Weather-App-week3.html
@@ -180,3 +180,18 @@
 
 </body>
 </html>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="learn-to-code.html">Learn to Code 1</a>
+    <a href="web-development-basics.html">Web Dev</a>
+    <a href="keep-going-with-apps.html">First Apps</a>
+    <a href="about-me.html">About Me</a>
+    <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a>
+    <a href="cookieClicker.html">Cookie Clicker</a>
+    <a href="Login.html">Login</a>
+    <a href="Selling-App.html">Selling App</a>
+    <a href="Weather-App.html">Weather App</a>
+    <a href="Weather-App-week2.html">Weather App</a>
+
+</nav>
