--- a/Weather-App-week3.html
+++ b/Weather-App-week3.html
@@ -24,6 +24,21 @@
         header h1 {
             margin: 0;
         }
+        nav {
+            background-color: #444;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+            padding: 5px 10px;
+        }
+        nav a:hover {
+            background-color: #666;
+            border-radius: 5px;
+        }
         .container {
             flex: 1;
             width: 80%;
@@ -93,6 +108,21 @@
     <header>
         <h1>Weather App</h1>
     </header>
+
+    <!-- Navigation Menu -->
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="learn-to-code.html">Learn to Code 1</a>
+        <a href="web-development-basics.html">Web Dev</a>
+        <a href="keep-going-with-apps.html">First Apps</a>
+        <a href="about-me.html">About Me</a>
+        <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a>
+        <a href="cookieClicker.html">Cookie Clicker</a>
+        <a href="Login.html">Login</a>
+        <a href="Selling-App.html">Selling App</a>
+        <a href="Weather-App.html">Weather App</a>
+        <a href="Weather-App-week2.html">Weather App</a>
+    </nav>
 
     <div class="container">
         <!-- Search Box -->
@@ -180,18 +210,3 @@
 
 </body>
 </html>
-
-<nav>
-    <a href="index.html">Home</a>
-    <a href="learn-to-code.html">Learn to Code 1</a>
-    <a href="web-development-basics.html">Web Dev</a>
-    <a href="keep-going-with-apps.html">First Apps</a>
-    <a href="about-me.html">About Me</a>
-    <a href="rock-paper-scissors.html">Rock, Paper, Scissors</a>
-    <a href="cookieClicker.html">Cookie Clicker</a>
-    <a href="Login.html">Login</a>
-    <a href="Selling-App.html">Selling App</a>
-    <a href="Weather-App.html">Weather App</a>
-    <a href="Weather-App-week2.html">Weather App</a>
-
-</nav>
