--- a/Weather-App-week3.html
+++ b/Weather-App-week3.html
@@ -139,7 +139,7 @@
         <!-- Weather Image Section -->
         <div class="image-container">
             <h2>Weather Image</h2>
-            <img id="weather-image" src="Weather-App-picture3" alt="Weather-App-picture3.png" />
+            <img id="weather-image" src="Weather-App-picture3.png" alt="Weather-App-picture3.png" />
             <img id="weather-image" src="Weather-App-picture4.png" alt="Weather-App-picture4.png" />
             <img id="weather-image" src="Weather-App-picture5.png" alt="Weather-App-picture4.png" />
         </div>
