--- a/Weather-App-week3.html
+++ b/Weather-App-week3.html
@@ -88,7 +88,7 @@
             margin-top: 2em;
         }
         .video-container video {
-            max-width: 60%; /* Reduced size */
+            max-width: 80%; /* Adjust the video to be larger than images but not too big */
             height: auto;
             border-radius: 10px;
         }
