--- a/Weather-App-week3.html
+++ b/Weather-App-week3.html
@@ -88,7 +88,7 @@
             margin-top: 2em;
         }
         .video-container video {
-            max-width: 80%; /* Adjust the video to be larger than images but not too big */
+            max-width: 50%; /* Adjust the video to be smaller */
             height: auto;
             border-radius: 10px;
         }
@@ -148,8 +148,9 @@
         <div class="video-container">
             <h2>Weather Video</h2>
             <video controls>
-                <source src="Weather-App-video4.mov" type="video/mp4">
-                <source src="Weather-App-video5.mov" type="video/mp4">
+                <!-- Replace .mov with .mp4 if the .mov file is not working -->
+                <source src="Weather-App-video4.mp4" type="video/mp4">
+                <source src="Weather-App-video5.mp4" type="video/mp4">
                 Your browser does not support the video element.
             </video>
         </div>
