--- a/Weather-App-week3.html
+++ b/Weather-App-week3.html
@@ -147,14 +147,13 @@
         <!-- Weather Video Section -->
         <div class="video-container">
             <h2>Weather Video</h2>
-            <video controls>
-                <!-- Replace .mov with .mp4 if the .mov file is not working -->
-                <source src="Weather-App-video4.mp4" type="video/mp4">
-                <source src="Weather-App-video5.mp4" type="video/mp4">
-                Your browser does not support the video element.
+
+            <video width="600" controls>
+                <source src="Weather-App-video5.mov" type="video/mp4">
+                Your browser does not support the video tag.
             </video>
         </div>
-
+        Weather-App-video5
         <!-- Project Description -->
         <div class="project-description">
             <h2>The Goal of My Project</h2>
