--- a/Weather-App-week3.html
+++ b/Weather-App-week3.html
@@ -148,18 +148,18 @@
         <div class="video-container">
             <h2>Weather Video</h2>
 
+            <!-- Corrected video with proper MIME type -->
             <video width="600" controls>
                 <source src="Weather-App-video4.mov" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
 
-            
             <video width="600" controls>
-                <source src="final video.mp4" type="video/mp5">
+                <source src="final video.mp4" type="video/mp4"> <!-- Correct MIME type for MP4 -->
                 Your browser does not support the video tag.
             </video>
         </div>
-        Weather-App-video5
+
         <!-- Project Description -->
         <div class="project-description">
             <h2>The Goal of My Project</h2>
